--- a/shippable.yml
+++ b/shippable.yml
@@ -1,21 +1,36 @@
+# Language setting
 language: node_js
 
 # Version number
 node_js:
-  - 0.10
   - 0.12
-  - 4.2.3
-  - iojs-v1
-  - iojs-v2
-  - iojs-v3
-  - 5.0
 
+env:
+  global:
+    - FOO=FUBU
+
+  matrix:
+    - M1=ONE
 
 build:
-  ci:
-    - node --version
-    
+  pre_ci:
+    - docker build -t=shippabledocker/shiphitchcock1_sample_node .
+
   pre_ci_boot:
-    image_name: drydock/u14nod
-    image_tag: prod
-    pull: true   
+    image_name: shippabledocker/shiphitchcock1_sample_node
+    image_tag: latest
+    pull: false
+    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+
+  ci:
+    - ps -eax
+    - ls -al
+
+  post_ci:
+    - docker build -t=shippabledocker/shiphitchcock1_sample_node:28feblighthouse .
+    - docker push shippabledocker/shiphitchcock1_sample_node:28feblighthouse
+
+integrations:
+  hub:
+    - integrationName: ship-docker
+      type: docker
