--- a/shippable.yml
+++ b/shippable.yml
@@ -14,10 +14,10 @@ env:
 
 build:
   pre_ci:
-    - docker build -t=shippabledocker/shiphitchcock1_sample_node .
+    - docker build -t=shippabledocker/shiphitchcock1_sample_node_lighthouse:28feb .
 
   pre_ci_boot:
-    image_name: shippabledocker/shiphitchcock1_sample_node
+    image_name: shippabledocker/shiphitchcock1_sample_node_lighthouse:28feb
     image_tag: latest
     pull: false
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
@@ -27,8 +27,8 @@ build:
     - ls -al
 
   post_ci:
-    - docker build -t=shippabledocker/shiphitchcock1_sample_node:28feblighthouse .
-    - docker push shippabledocker/shiphitchcock1_sample_node:28feblighthouse
+    - docker build -t=shippabledocker/shiphitchcock1_sample_node_lighthouse:28feb .
+    - docker push shippabledocker/shiphitchcock1_sample_node_lighthouse:28feb
 
 integrations:
   hub:
