--- a/shippable.yml
+++ b/shippable.yml
@@ -10,6 +10,33 @@ node_js:
   - iojs-v3
   - 5.0
 
+env:
+  global:
+    - FOO=FUBU
+
+  matrix:
+    - M1=ONE
+
 build:
+  pre_ci:
+    - docker build -t=shippabledocker/shiphitchcock1_sample_nod .
+
+  pre_ci_boot:
+    image_name: shippabledocker/shiphitchcock1_sample_nod
+    image_tag: latest
+    pull: false
+    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+
   ci:
-    - node --version   
+    - node --version  
+   # - ps -eax
+   # - ls -al 
+
+  post_ci:
+    - docker push shippabledocker/shiphitchcock1_sample_nod
+
+integrations:
+  hub:
+    - integrationName: ship-docker
+      type: docker
+      
