--- a/shippable.yml
+++ b/shippable.yml
@@ -2,13 +2,13 @@ language: node_js
 
 # Version number
 node_js:
- # - 0.10
+  - 0.10
   - 0.12
- # - 4.2.3
-  #- iojs-v1
- # - iojs-v2
- # - iojs-v3
-#  - 5.0
+  - 4.2.3
+  - iojs-v1
+  - iojs-v2
+  - iojs-v3
+  - 5.0
 
 env:
   global:
@@ -18,13 +18,13 @@ env:
     - M1=ONE
 
 build:
-  pre_ci:
-    - docker build -t=shippabledocker/shiphitchcock1_sample_nod .
+  #pre_ci:
+ #   - docker build -t=shippabledocker/shiphitchcock1_sample_nod .
 
   pre_ci_boot:
     image_name: shippabledocker/shiphitchcock1_sample_nod
     image_tag: latest
-    pull: false
+    pull: true
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
@@ -33,6 +33,7 @@ build:
    # - ls -al 
 
   post_ci:
+    - docker build -t=shippabledocker/shiphitchcock1_sample_nod .
     - docker push shippabledocker/shiphitchcock1_sample_nod
 
 integrations:
