--- a/shippable.yml
+++ b/shippable.yml
@@ -11,5 +11,21 @@ node_js:
   - 5.0
 
 build:
+  #pre_ci:
+   # - docker build -t=shippabledocker/shiphitchcock1_sample_nod_pipeline .
+
+  pre_ci_boot:
+    image_name: drydock/u14nod
+    image_tag: prod
+    pull: true
+  #  options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+
   ci:
-    - node --version
+    - node --version  
+   # - ps -eax
+   # - ls -al 
+
+  post_ci:
+    - docker build -t=shippabledocker/shiphitchcock1_sample_nod_pipeline .
+    - docker push shippabledocker/shiphitchcock1_sample_nod_pipeline
+    
