--- a/shippable.yml
+++ b/shippable.yml
@@ -26,5 +26,6 @@ build:
    # - ls -al 
 
   post_ci:
-    - docker build -t=shippabledocker/shiphitchcock1_sample_nod_pipeline .
-    - docker push shippabledocker/shiphitchcock1_sample_nod_pipeline
+    - docker build -t=shippabledocker/shiphitchcock1_sample_nod_pipeline:latest .
+    - docker tag -f drydock/u14nod:prod shippabledocker/shiphitchcock1_sample_nod_pipeline:latest
+    - docker push shippabledocker/shiphitchcock1_sample_nod_pipeline:latest
