--- a/shippable.yml
+++ b/shippable.yml
@@ -2,23 +2,23 @@ language: node_js
 
 # Version number
 node_js:
-  - 0.10
+ # - 0.10
   - 0.12
-  - 4.2.3
-  - iojs-v1
-  - iojs-v2
-  - iojs-v3
-  - 5.0
+  #- 4.2.3
+  #- iojs-v1
+  #- iojs-v2
+  #- iojs-v3
+  #- 5.0
 
 build:
-  #pre_ci:
-   # - docker build -t=shippabledocker/shiphitchcock1_sample_nod_pipeline .
+  pre_ci:
+    - docker build -t=shippabledocker/shiphitchcock1_sample_nod_pipeline .
 
   pre_ci_boot:
-    image_name: drydock/u14nod
-    image_tag: prod
-    pull: true
-  #  options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+    image_name: shippabledocker/shiphitchcock1_sample_nod_pipeline
+    image_tag: latest
+    pull: false
+    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
     - node --version  
@@ -26,6 +26,4 @@ build:
    # - ls -al 
 
   post_ci:
-    - docker build -t=shippabledocker/shiphitchcock1_sample_nod_pipeline:latest .
-    - docker tag -f drydock/u14nod:prod shippabledocker/shiphitchcock1_sample_nod_pipeline:latest
     - docker push shippabledocker/shiphitchcock1_sample_nod_pipeline:latest
