--- a/shippable.yml
+++ b/shippable.yml
@@ -26,4 +26,4 @@ build:
    # - ls -al 
 
   post_ci:
-    - docker push shippabledocker/shiphitchcock1_sample_nod_pipeline:latest
+    - docker push shippabledocker/shiphitchcock1_sample_nod_pipeline
