--- a/shippable.yml
+++ b/shippable.yml
@@ -27,3 +27,8 @@ build:
 
   post_ci:
     - docker push shippabledocker/shiphitchcock1_sample_nod_pipeline
+
+integrations:
+  hub:
+    - integrationName: ship-docker
+      type: docker
