--- a/shippable.yml
+++ b/shippable.yml
@@ -19,21 +19,21 @@ env:
 
 build:
   pre_ci:
-    - docker build -t=shippabledocker/pipeline .
+    - docker build -t=shippabledocker/shiphitchcock1_testsamplenode .
 
   pre_ci_boot:
-    image_name: shippabledocker/pipeline
+    image_name: shippabledocker/shiphitchcock1_testsamplenode
     image_tag: latest
     pull: false
-    options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
+  #  options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
     - node --version  
-   # - ps -eax
-   # - ls -al 
+    - ps -eax
+    - ls -al 
 
   post_ci:
-    - docker push shippabledocker/pipeline
+    - docker push shippabledocker/shiphitchcock1_testsamplenode
 
 integrations:
   hub:
