--- a/shippable.yml
+++ b/shippable.yml
@@ -22,7 +22,7 @@ build:
     - docker build -t=shippabledocker/shiphitchcock1_testsamplenode .
 
   pre_ci_boot:
-    - image_name: shippabledocker/shiphitchcock1_testsamplenode
+      image_name: shippabledocker/shiphitchcock1_testsamplenode
       image_tag: latest
       pull: false
   #  options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
