--- a/shippable.yml
+++ b/shippable.yml
@@ -3,15 +3,27 @@ language: node_js
 # Version number
 node_js:
   - 0.10
-#  - 0.12
+  - 0.12
  # - 4.2.3
   #- iojs-v1
   #- iojs-v2
   #- iojs-v3
   #- 5.0
 
-#timeout: 5
-
 build:
   ci:
     - node --version
+    
+  cache: true
+  
+integrations:
+  notifications:
+    - integrationName: email
+      type: email
+      recipients: 
+        - shiphitchcock1@gmail.com
+       # - varsha@shippable.com
+      on_start: always
+      on_success: always
+      on_failure: always
+      on_pull_request: always
