--- a/shippable.yml
+++ b/shippable.yml
@@ -18,19 +18,19 @@ env:
     - M1=ONE
 
 build:
-  pre_ci:
-    - docker build -t=shippabledocker/pipeline .
+ # pre_ci:
+  #  - docker build -t=shippabledocker/pipeline .
 
   pre_ci_boot:
     image_name: shippabledocker/pipeline
     image_tag: latest
-    pull: false
+    pull: true
     options: '--privileged=true --net=bridge -e FOO=true -e BOO=false'
 
   ci:
     - node --version  
-   # - ps -eax   
-   # - ls -al 
+    - ps -eax   
+    - ls -al 
 
   post_ci:
     - docker build -t=shippabledocker/pipeline:$BRANCH.$BUILD_NUMBER .
