--- a/shippable.yml
+++ b/shippable.yml
@@ -16,7 +16,7 @@ build:
     
   pre_ci_boot:
     image_name: shippable/minv2
-    image_tag: prod
+    image_tag: latest
     pull: false
 
 services:
