--- a/shippable.yml
+++ b/shippable.yml
@@ -4,11 +4,7 @@ language: node_js
 node_js:
   - 0.10
   - 0.12
-  - 4.2.3
-  - iojs-v1
-  - iojs-v2
-  - iojs-v3
-  - 5.0
+  - 0.11
 
 build:
   ci:
@@ -17,7 +13,7 @@ build:
   pre_ci_boot:
     image_name: shippable/minv2
     image_tag: latest
-    pull: false
+    pull: true
 
 services:
   - rabbitmq
